# xor.systemc

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  run.sh
INSTRUCTIONS/: INSTRUCTIONS.md
